Add a little more safety, let's test that the goss.yaml file contains certain strings. This is a bit interception-style since it is the file we are in, but if a wrong file gets mapped into the container these tests will fail.

--- a/tests/goss.yaml
+++ b/tests/goss.yaml
@@ -14,3 +14,10 @@ file:
     filetype: file
     size:
       gt: 0
+    contains:
+    - "command:"
+    - "docker:"
+    - "goss:"
+    - "file:"
+    - "/tests/goss.yaml:"
+
